user registration & validation in progress

--- a/HERMES/Chat/package.json
+++ b/HERMES/Chat/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "apollo-server": "^2.19.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "graphql": "^15.4.0",
     "mysql2": "^2.2.5",
