--- a/HERMES/Chat/package.json
+++ b/HERMES/Chat/package.json
@@ -16,7 +16,7 @@
     "nodemon": "^2.0.6"
   },
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "nodemon server.js --ignore client/",
     "start": "node server.js"
   },
   "repository": {
