--- a/HERMES/Chat/client/package.json
+++ b/HERMES/Chat/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
     "graphql": "^15.4.0",
+    "jwt-decode": "^3.1.2",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
