--- a/HERMES/Chat/client/package.json
+++ b/HERMES/Chat/client/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.2.6",
     "graphql": "^15.4.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
