--- a/HERMES/Chat/docker-compose.yml
+++ b/HERMES/Chat/docker-compose.yml
@@ -10,19 +10,26 @@ services:
       - "3001:3000" # Bind port 3000 of host to 3000 of container
     container_name: client-docker
     restart: always # What to do if container crashes
+    networks:
+      - chat
     links:
       - api
+
   # Create api container
   api:
-    # Create api container
     build: ./api
     ports:
       - "8080:4000"
     container_name: api-docker
     restart: always
+    command: npx sequelize db:migrate:undo:all
+    command: npx sequelize db:migrate
+    networks:
+      - chat
     links:
       - db
 
+  # Create database container
   db:
     image: mysql:5.7
     container_name: db-docker
@@ -50,3 +57,8 @@ services:
         "--character-set-server=utf8mb4",
         "--collation-server=utf8mb4_unicode_ci",
       ]
+    networks:
+      - chat
+
+networks:
+  chat:
