--- a/HERMES/Chat/client/package.json
+++ b/HERMES/Chat/client/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.7",
+    "@chakra-ui/react": "^1.3.3",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.4",
     "@testing-library/user-event": "^12.6.3",
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
+    "framer-motion": "^3.9.2",
     "graphql": "^15.5.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
@@ -18,7 +22,7 @@
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^4.0.3",
     "subscriptions-transport-ws": "^0.9.18",
     "web-vitals": "^0.2.4"
   },
