UPDATE Docker-compose | add HOT-RELOADING in container && start migration on start

--- a/HERMES/Chat/api/Dockerfile
+++ b/HERMES/Chat/api/Dockerfile
@@ -4,12 +4,13 @@ FROM node:alpine
 RUN mkdir -p /hermes/chat
 RUN mkdir -p /hermes/chat/api
 # Set working directory so that all subsequent command runs in this folder
-WORKDIR /hermes/chat/backend
+WORKDIR /hermes/chat/api
 # Copy package json and install dependencies
 COPY package*.json ./
 RUN npm install
 # Copy our app
 COPY . .
+RUN npm run migratedb
 # Expose port to access server
 EXPOSE 8080
 # Command to run our app
