--- a/HERMES/Chat/api/package.json
+++ b/HERMES/Chat/api/package.json
@@ -10,14 +10,16 @@
     "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.5.0"
+    "sequelize": "^6.5.0",
+    "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
   },
   "scripts": {
     "dev": "nodemon server.js --ignore client/",
-    "start": "node server.js"
+    "start": "node server.js",
+    "migratedb": "sequelize db:migrate"
   },
   "repository": {
     "type": "git",
