fix dockerfile and node-sass

--- a/HERMES/Chat/client/Dockerfile
+++ b/HERMES/Chat/client/Dockerfile
@@ -1,18 +1,15 @@
 # Base image
-FROM node:alpine
+FROM node:latest
 # Make folder to put our files in
-RUN mkdir -p /hermes/chat
 RUN mkdir -p /hermes/chat/client
 # Set working directory so that all
-# subsequent command runs in this folder
 WORKDIR /hermes/chat/client
 # Copy package json and install dependencies
 COPY package*.json ./
-RUN yarn add node-sass
+RUN npm rebuild node-sass
 RUN npm install --silent
 # Copy our app
 COPY . .
-RUN npm rebuild node-sass
 # Expose port to access server
 EXPOSE 3000
 # Command to run our app
