--- a/HERMES/Chat/docker-compose.yml
+++ b/HERMES/Chat/docker-compose.yml
@@ -2,47 +2,52 @@ version: "3.8"
 
 services:
   # Create client container
-  client:
-    build: ./client
+  client: # Name of our service
+    build: ./client # path to dockerfile
     stdin_open: true
     tty: true
     ports: # Port binding to host from docker container
-      - "3001:3000" # Bind port 3001 of host to 3000 of container
+      - "3000:3000" # Bind port 3001 of host to 3000 of container
     container_name: client-docker
     restart: always # What to do if container crashes
+    volumes:
+      - ./client:/hermes/chat/client
     links:
       - api
-    volumes: # For webpack dev server to use our local files:
-      - ./client:/hermes/chat/client
-      # see https://github.com/sass/node-sass/issues/2165 cuz node-sass
-      - /hermes/chat/client/node_modules/
   # Create api container
   api:
+    # Create api container
     build: ./api
     ports:
       - "8080:4000"
     container_name: api-docker
+    environment:
+      - MYSQL_DATABASE=${DATABASE}
     restart: always
-    volumes: # For webpack dev server to use our local files
+    volumes:
       - ./api:/hermes/chat/api
     links:
       - db
-  # Create db container
+
   db:
     image: mysql:5.7
     container_name: db-docker
     restart: always
     environment:
       - MYSQL_DATABASE=${DATABASE}
+      # So you don't have to use root, but you can if you like
       - MYSQL_USER=${USER}
+      # You can use whatever password you like
       - MYSQL_PASSWORD=${PASSWORD}
+      # Password for root access
       - MYSQL_ROOT_PASSWORD=${ROOT_PASSWORD}
     ports:
       # <Port exposed> : < MySQL Port running inside container>
-      - "3307:3306"
+      - "3306:3306"
     expose:
+      # Opens port 3306 on the container
       - "3306"
-      # Where datas will be persisted
+      # Where our data will be persisted
     volumes:
       - ./docker/data/db:/var/lib/mysql
     command:
