--- a/HERMES/Chat/docker-compose.yml
+++ b/HERMES/Chat/docker-compose.yml
@@ -35,10 +35,10 @@ services:
     container_name: db-docker
     restart: always
     environment:
-      - MYSQL_DATABASE=${DATABASE}
-      - MYSQL_USER=${USER}
-      - MYSQL_PASSWORD=${PASSWORD}
-      - MYSQL_ROOT_PASSWORD=${ROOT_PASSWORD}
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: chat
+      MYSQL_USER: root
+      MYSQL_PASSWORD: password
     ports:
       # <Port exposed> : < MySQL Port running inside container>
       - "3306:3306"
