upload image is working, TODO: use default image when image is empty because not required

--- a/HERMES/Chat/api/package.json
+++ b/HERMES/Chat/api/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "apollo-server": "^2.19.2",
+    "apollo-server-express": "^2.22.2",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "graphql": "^15.5.0",
