--- a/HERMES/Chat/client/package.json
+++ b/HERMES/Chat/client/package.json
@@ -14,6 +14,7 @@
     "apollo-upload-client": "^14.1.3",
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
+    "dotenv": "^8.2.0",
     "framer-motion": "^3.9.2",
     "graphql": "^15.5.0",
     "jwt-decode": "^3.1.2",
