--- a/HERMES/Chat/client/package.json
+++ b/HERMES/Chat/client/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "subscriptions-transport-ws": "^0.9.18",
