--- a/HERMES/Chat/client/package.json
+++ b/HERMES/Chat/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.4",
     "@testing-library/user-event": "^12.6.3",
+    "aos": "^2.3.4",
     "apollo-upload-client": "^14.1.3",
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
