--- a/HERMES/Chat/client/package.json
+++ b/HERMES/Chat/client/package.json
@@ -24,10 +24,13 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "simple-peer": "^9.11.0",
+    "socket.io-client": "^4.0.1",
     "subscriptions-transport-ws": "^0.9.18",
     "web-vitals": "^0.2.4"
   },
