--- a/HERMES/Chat/client/package.json
+++ b/HERMES/Chat/client/package.json
@@ -28,6 +28,8 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "simple-peer": "^9.11.0",
+    "socket.io-client": "^4.0.1",
     "subscriptions-transport-ws": "^0.9.18",
     "web-vitals": "^0.2.4"
   },
