--- a/HERMES/Chat/client/package.json
+++ b/HERMES/Chat/client/package.json
@@ -8,6 +8,7 @@
     "@chakra-ui/react": "^1.3.3",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "@fontsource/poppins": "^4.4.2",
     "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.4",
