--- a/HERMES/Chat/client/package.json
+++ b/HERMES/Chat/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.7",
     "@chakra-ui/icons": "^1.0.12",
+    "@chakra-ui/modal": "^1.8.7",
     "@chakra-ui/react": "^1.3.3",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
@@ -57,5 +58,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@chakra-ui/button": "^1.3.2",
+    "@chakra-ui/hooks": "^1.5.2",
+    "@chakra-ui/layout": "^1.4.5",
+    "react-hook-form": "^7.7.1"
   }
 }
