--- a/HERMES/Chat/api/.env.dist
+++ b/HERMES/Chat/api/.env.dist
@@ -2,3 +2,5 @@ DATABASE_URL=mysql://<USER>:<PASSWORD>@<HOST>:<PORT>/<DATABASE_NAME>
 BASE_URL=http://localhost:4000
 PASSWORD_TOKEN=
 NODE_ENV=development
+MAIL_USER=semreh.courriel@gmail.com
+MAIL_PASS=
