--- a/HERMES/Chat/api/package.json
+++ b/HERMES/Chat/api/package.json
@@ -11,6 +11,7 @@
     "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.6.1",
     "sequelize": "^6.5.0",
     "sequelize-cli": "^6.2.0",
     "socket.io": "^4.0.1"
