--- a/HERMES/Chat/client/package.json
+++ b/HERMES/Chat/client/package.json
@@ -26,7 +26,6 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
-    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
@@ -63,7 +62,6 @@
   "devDependencies": {
     "@chakra-ui/button": "^1.3.2",
     "@chakra-ui/hooks": "^1.5.2",
-    "@chakra-ui/layout": "^1.4.5",
-    "react-hook-form": "^7.7.1"
+    "@chakra-ui/layout": "^1.4.5"
   }
 }
