--- a/HERMES/Chat/client/package.json
+++ b/HERMES/Chat/client/package.json
@@ -16,16 +16,12 @@
     "@testing-library/user-event": "^12.6.3",
     "aos": "^2.3.4",
     "apollo-upload-client": "^14.1.3",
-    "bootstrap": "^4.6.0",
-    "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
     "framer-motion": "^3.9.2",
     "graphql": "^15.5.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
-    "node-sass": "^5.0.0",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
@@ -33,6 +29,7 @@
     "simple-peer": "^9.11.0",
     "socket.io-client": "^4.0.1",
     "subscriptions-transport-ws": "^0.9.18",
+    "use-sound": "^4.0.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
