--- a/HERMES/Chat/client/Dockerfile
+++ b/HERMES/Chat/client/Dockerfile
@@ -1,9 +1,9 @@
 # pull the official base image
 FROM node:alpine3.11
 # set working direction
-WORKDIR /hermes/chat
+WORKDIR /hermes/chat/client
 # add `/app/node_modules/.bin` to $PATH
-ENV PATH /chat/node_modules/.bin:$PATH
+ENV PATH /chat/client/node_modules/.bin:$PATH
 # install application dependencies
 COPY package.json ./
 RUN yarn install --force 
