maj docker-compose with hub

--- a/HERMES/Chat/docker-compose.yml
+++ b/HERMES/Chat/docker-compose.yml
@@ -31,7 +31,7 @@ services:
 
   # Create db container
   db:
-    image: mysql:5.7
+    image: lefernix/hermes-mysql-db:test
     container_name: db-hermes
     restart: always
     environment:
